test/loopFixedPoint3.slq

def main(){
	x:=H(0:ğ”¹);
	y:=dup(x);
	while(measure(H(0:ğ”¹))){ /// error
		forget(y);
	}
	return H(x);
}
